adding profile to render user info

--- a/posts/templates/profile.html
+++ b/posts/templates/profile.html
@@ -35,7 +35,7 @@
                 <li class="nav-item">
                   <a class="nav-link active" href="#">Posts</a>
                 </li>
-                <li class="nav-item">
+               <!-- <li class="nav-item">
                   <a class="nav-link" href="#">IGTV</a>
                 </li>
                 <li class="nav-item">
@@ -43,7 +43,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#">TAGGED</a>
-                  </li>
+                  </li> -->
               </ul>
             </div>
             <div class="card-body">
